[tool.poetry]
name = "simple-doc-chat"
version = "0.1.0"
description = ""
authors = ["Koen van Gilst <koen@koenvangilst.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.9.34"
transformers = "^4.36.2"
torch = "^2.1.2"
docx2txt = "^0.8"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
